# monadeck

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: active_runtime.rs  cmd_runner.rs  collections.rs  config.rs  desktop.rs  devices.rs  favorites.rs  floor_calibration.rs  gpu.rs  installer.rs  launch_options.rs  lib.rs  monado_conn.rs  openvr_paths.rs  overlay_config.rs  paths.rs  playspace_overrides.rs  playtime.rs  plugins.rs  preflight.rs  proton.rs  setcap.rs  steam.rs  survive_calibration.rs  uevr.rs
crates/overlay/: Cargo.toml  build.rs
crates/overlay/src/: audio.rs  games.rs  gfx.rs  main.rs  mathx.rs  monado.rs  ui.rs
desktop/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
desktop/scripts/: stage-overlay.sh
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: beyond.rs  bindings.rs  commands.rs  lib.rs  main.rs  overlay.rs  state.rs
desktop/src/lib/: api.ts  knownEnvVars.ts  launchOptions.ts  state.svelte.ts  types.ts  windows.ts
desktop/src/lib/bindings/: ControllerDiagram.svelte  GameTile.svelte  HandPanel.svelte  api.ts  store.svelte.ts  types.ts
desktop/src/lib/bindings/data/: controllers.ts  knuckles.ts  oculusTouch.ts  profileRegistry.ts  svgAssets.ts  viveWand.ts
desktop/src/lib/components/: AppsBar.svelte  BurgerMenu.svelte  CapToast.svelte  CrashToast.svelte  DeviceStrip.svelte  FloorCalToast.svelte  LaunchOptions.svelte  NoRuntimeBanner.svelte  PreflightBanner.svelte  ProtonBanner.svelte  TitleBar.svelte  Toggle.svelte  WelcomeSetup.svelte  WindowControls.svelte
desktop/src/lib/views/: AboutView.svelte  BeyondView.svelte  CompositorView.svelte  EnvironmentView.svelte  GeneralView.svelte  LogsView.svelte  PluginsView.svelte
desktop/src/routes/: +layout.ts  +page.svelte
desktop/src/routes/bindings/: +page.svelte
desktop/src/routes/settings/: +page.svelte
