# Root workspace holds only the pure-Rust orchestration core. The Tauri desktop
# app (desktop/src-tauri) is its own workspace so its heavy web/webkit dependency
# tree stays out of the core build — same split NemuriXR uses.
[workspace]
resolver = "2"
members = ["crates/core", "crates/overlay"]
exclude = ["desktop"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Eidenz"]

# Redirect the libmonado git dep (used by core + overlay) to our vendored, patched
# copy that adds the 1.8 controller-freeze binding. Keeps every dependant on one
# consistent libmonado without changing their individual dependency lines.
[patch."https://github.com/wayvr-org/libmonado-rs.git"]
libmonado = { path = "vendor/libmonado-rs" }
